--- a/themes/hugo-academic/layouts/publication/single2.html
+++ b/themes/hugo-academic/layouts/publication/single2.html
@@ -11,7 +11,7 @@
     <p class="pub-abstract">{{ .Params.abstract | markdownify }}</p>
     {{ end }}
 
-    {{ if and (isset .Params "publication_types") (isArray .Params.publication_types) (gt (len .Params.publication_types) 0) (ne (index .Params.publication_types 0) "0") }}
+    {{ if (.Params.publication_types) and (ne (index .Params.publication_types 0) "0") }}
     <div class="row">
       <div class="col-md-1"></div>
       <div class="col-md-10">
