--- a/themes/hugo-academic/layouts/publication/single.html
+++ b/themes/hugo-academic/layouts/publication/single.html
@@ -43,4 +43,15 @@
       </div>
       <div class="col-md-1"></div>
     </div>
-    <div class="d-md
+    <div class="d-md-none space-below"></div>
+    {{ end }}
+
+    <div class="space-below"></div>
+
+    <div class="article-style">{{ .Content }}</div>
+
+    {{ partial "page_footer.html" . }}
+
+  </div>
+</div>
+{{- end -}}
